		single-state evolution faster.  By default you should ignore this parameter
		(in SimpleBreeder and SimpleEvaluator).  Expect this facility to change over 
		time before it becomes official.
	Added Population.clear() and Subpopulation.clear()
	Made ParameterDatabase.directoryFor private
	Deleted ParameterDatabase.fileFor
	Deleted ParameterDatabase.listeners
	Deleted ParameterDatase.filename
	Added ParameterDatsabase.label and getLabel()
	Redefined getLocation() to return a parameter database rather than a String
	Modified Evolve.loadParameterDatabase to allow -from and -at parameters to specify
		loading from a parameter file stored as a resource rather than from an
		explicit file.
	Added 'make jar' to Makefile
        ec/app/regression/Regression.java can now load data points from a file.
	Modified ec/app/ant/Ant.java, ec/app/edge/Edge.java and ec/app/Regression.java to use
		the new resource loading option
	Modified ec/Subpopulation.java, ec/pso/PSOSubpopualtion.java, ec/gp/ge/GESpecies.java,
		and ec/evolve/RandomRestarts.java to use the new resource loading option
	Modifications to Tutorial 4 to stay current with recent changes in ECJ.
	Added GPNode.expectedChildren(), and modified GPNode.checkConstraints to call it
		to simplify the code for making a GPNode.  Modified all the tutorials and
		demo examples accordingly.  Tweaked ADFArgument and ERC to have an
		expectedChildren of 0 (ADFArgument always, ERC typically).  Did not add
		into ADF, which uses checkConstraints on its own.  Modified the manual
		to describe the new function.
	Bug fixes to SUSSelection.  Thanks to Uday Kamath <kamathuday@gmail.com>
	Updated MersenneTwister and MersenneTwisterFast to allow full-open, half-open
		(both directions) and fully-closed intervals for nextDouble and nextFloat
	Updated Benchmarks and Regression to generate points from fully-closed intervals
	Added MultiObjectiveFitness.getRankings(...)