@@ -1836,8 +1836,8 @@ pop.subpop.0 = ec.Subpopulation \\
 pop.subpop.0.size = 100 \\
 pop.subpop.0.species = ec.vector.IntegerVectorSpecies\\
 pop.subpop.0.species.ind = ec.vector.IntegerVectorIndividual\\
-pop.subpop.0.species.fitness = ec.simple.SimpleFitness\\\
-...
+pop.subpop.0.species.fitness = ec.simple.SimpleFitness\\
+...\\
 pop.subpop.19 = ec.Subpopulation \\
 pop.subpop.19.size = 25 \\
 pop.subpop.19.species = ec.vector.FloatVectorSpecies\\
